--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -18,7 +18,7 @@
             In my current research, I apply statistical learning methods from natural language processing to make
             predictions about proteins.
             Besides that,
-            my main interests are learning on graphs and using statistical learning in natural sciences.
+            my main interests are learning on graphs and bayesian inference.
             <br>
             From the experiences of my dual study program and through several
             <a (click)="scroll('projects')" class="link-style-orange">projects</a>,
