--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -372,6 +372,39 @@
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <a class="item-title">Bachelor Thesis: Understanding Variational Autoencoders’ Latent Representations of
+                Remote Sensing Images</a>
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-green" href="https://www.unibw.de/home-en" target="_blank">
+                    Bundeswehr University Munich</a></h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                May 2019 - Sept 2019
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
+              </p>
+              <p class="item-content">My thesis was my first practical introduction to machine learning.
+                I trained a Variational Autoencoder on remote sensing images and visualized the latent space in various
+                ways.
+                Bishop's "Pattern Recognition And Machine Learning" basically saved me and was my main source for
+                learning. It taught me the basics I needed from what neural networks, entropy, or convolutions even are
+                to variational inference and latent variable models. Check out my
+                <a href="/assets/bachelor_thesis.pdf" target="_blank" class="link-style-orange">thesis
+                  <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
+                </a> or have a look at the
+                <a href="https://github.com/HannesStark/bachelorThesis" target="_blank"
+                   class="link-style-orange">code
+                  <fa-icon class="link-icon-style-orange" [icon]="github"></fa-icon>
+                </a>.
+
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Tool for calculating Network centralities</a>
               <div fxLayout="row">
                 <h3>
