--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,10 +15,13 @@
           <p class="text-align-left">
             Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
             <br>
-            In my current research, I apply statistical learning methods from natural language processing to make
+            In my current research, I apply machine learning methods from natural language processing to make
             predictions about proteins.
             Besides that,
-            my main interests are learning on graphs and bayesian inference.
+            my main interests are on the one hand learning on graphs with topics like GNN expressivity or encoding
+            equivariances in GNNs.
+            On the other hand, I am very excited by Bayesian methods, variational methods, or approximate inference in
+            general.
             <br>
             From the experiences of my dual study program and through several
             <a (click)="scroll('projects')" class="link-style-orange">projects</a>,
