--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -20,7 +20,7 @@
             Besides that,
             my main interests are on the one hand learning on graphs with topics like GNN expressivity or encoding
             equivariances in GNNs.
-            On the other hand, I am very excited by Bayesian methods, variational methods, or approximate inference in
+            On the other hand, I am very excited by Bayesian optimization, uncertainty estimation, variational inference, or approximate inference methods in
             general.
             <br>
             From the experiences of my dual study program and through several
