--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -1,3 +1,6 @@
+.card-header:hover {
+  cursor: pointer;
+}
 
 .profile-image {
   border-radius: 50%;
@@ -24,7 +27,7 @@
 }
 
 .video {
-  padding-bottom: 56.25%;  /* or 75% depending upon the type of video you have */
+  padding-bottom: 56.25%; /* or 75% depending upon the type of video you have */
 }
 
 .video-container {
@@ -70,69 +73,71 @@ h3 {
 }
 
 .link-style-green:hover {
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .link-style-green, .link-style-green:visited {
-	text-decoration: none;
-	position: relative;
-	&:after {
-		content: '';
-		height: 2px;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		background: var(--color-primary);
-		transition: 0.2s;
+  text-decoration: none;
+  position: relative;
+
+  &:after {
+    content: '';
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-primary);
+    transition: 0.2s;
     z-index: 1111;
-	}
+  }
 
-	&:hover:after {
-		width: 100%;
-	}
+  &:hover:after {
+    width: 100%;
+  }
 
-	&.block {
-		display: block;
-		padding: 0.5em;
+  &.block {
+    display: block;
+    padding: 0.5em;
 
-		&:hover {
-		}
-	}
+    &:hover {
+    }
+  }
 }
 
 .link-style-orange:hover {
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .link-style-orange, .link-style-orange:visited {
-	text-decoration: none;
-	position: relative;
+  text-decoration: none;
+  position: relative;
   font-weight: 500;
   color: var(--color-accent);
-	&:after {
-		content: '';
-		height: 2px;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		background: var(--color-accent);
-		transition: 0.2s;
+
+  &:after {
+    content: '';
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-accent);
+    transition: 0.2s;
     z-index: 1111;
-	}
+  }
 
-	&:hover:after {
-		width: 100%;
-	}
+  &:hover:after {
+    width: 100%;
+  }
 
-	&.block {
-		display: block;
-		padding: 0.5em;
+  &.block {
+    display: block;
+    padding: 0.5em;
 
-		&:hover {
-		}
-	}
+    &:hover {
+    }
+  }
 }
 
 
