--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -1,5 +1,18 @@
+.word-cloud {
+  margin-bottom: 16px;
+}
+
 .card-header:hover {
   cursor: pointer;
+}
+
+.mat-card-subtitle {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+.mat-card-content {
+  margin-top: 16px;
 }
 
 .profile-image {
