reviews layout is now finish and I only need to add content

--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -59,30 +59,28 @@
                 </mat-card-header>
                 <mat-card-content [@openClose]="open ? 'open' : 'closed'">
 
-                    The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                    A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                    bred for hunting.
+                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                  bred for hunting.
 
                 </mat-card-content>
 
                 <div fxLayout="column" fxLayoutGap="5px">
-                  <div  fxLayout="row" fxLayoutAlign="center center">
-                    <img class="word-cloud" fxFlex="100" src="assets/Cloud_Probabilistic_ML.jpg"
+                  <div fxLayout="row" fxLayoutAlign="center center">
+                    <img class="word-cloud" ngClass.xs="width100" fxFlex="100" src="assets/Cloud_Probabilistic_ML.jpg"
                          alt="Word cloud of contents">
                   </div>
-                  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="5px" fxLayoutAlign="center center">
-                    <img fxFlex="33" src="assets/Probabilistic ML - Lecture 17 - Factor Graphs 1-15-9 screenshot.jpg"
+                  <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
+                    <img fxFlex="50" src="assets/Probabilistic ML - Lecture 17 - Factor Graphs 1-15-9 screenshot.jpg"
                          alt="Photo of lecture probabilistic ML">
-                    <img fxFlex="33"
+                    <img fxFlex="50"
                          src="assets/Probabilistic ML — Lecture 22 — Variational Inference 44-40 screenshot.jpg"
-                         alt="Photo of lecture probabilistic ML">
-                    <img fxFlex="33"
-                         src="assets/Probabilistic%20ML%20-%20Lecture%209%20-%20Gaussian%20Processes%201-19-7%20screenshot.jpg"
                          alt="Photo of lecture probabilistic ML">
                   </div>
                   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="5px" fxLayoutAlign="center center"
                        [@openClose]="open ? 'open' : 'closed'">
-                    <img fxFlex="33" src="assets/Probabilistic ML - Lecture 17 - Factor Graphs 1-15-9 screenshot.jpg"
+                    <img fxFlex="33"
+                         src="assets/Probabilistic%20ML%20-%20Lecture%209%20-%20Gaussian%20Processes%201-19-7%20screenshot.jpg"
                          alt="Photo of lecture probabilistic ML">
                     <img fxFlex="33"
                          src="assets/Probabilistic ML — Lecture 22 — Variational Inference 44-40 screenshot.jpg"
@@ -105,7 +103,40 @@
                 </div>
               </mat-card>
             </div>
-            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <mat-card class="whole-card" (click)="open=!open">
+                <mat-card-header class="card-header">
+
+                  <mat-card-title>Statistics and Probability Theory</mat-card-title>
+                  <mat-card-subtitle>
+                    Prof. Joseph Blitzstein, Harvard University
+                  </mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content [@openClose]="open ? 'open' : 'closed'">
+
+                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                  bred for hunting.
+
+                </mat-card-content>
+
+                <div fxLayout="column" fxLayoutGap="5px">
+                  <div fxLayout="row" fxLayoutAlign="center center">
+                    <img class="word-cloud" fxFlex="100" src="assets/Cloud_Probabilistic_ML.jpg"
+                         alt="Word cloud of contents">
+                  </div>
+                  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="5px" fxLayoutAlign="center center">
+                    <img fxFlex="33" src="assets/Lecture%201_%20Probability%20and%20Counting%20_%20Statistics%20110%2027-52%20screenshot.jpg">
+                    <img fxFlex="33"
+                         src="assets/Lecture%207_%20Gambler's%20Ruin%20and%20Random%20Variables%20_%20Statistics%20110%2024-6%20screenshot.jpg">
+                    <img fxFlex="33"
+                         src="assets/Lecture%2027_%20Conditional%20Expectation%20given%20an%20R.V.%20_%20Statistics%20110%2042-43%20screenshot.jpg">
+                  </div>
+                </div>
+              </mat-card>
+            </div>
+
           </div>
         </div>
       </div>
