--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -72,11 +72,11 @@ h3 {
   color: var(--color-primary);
 }
 
-.link-style-green:hover {
+.link-style-black:hover {
   cursor: pointer;
 }
 
-.link-style-green, .link-style-green:visited {
+.link-style-black, .link-style-black:visited {
   text-decoration: none;
   position: relative;
 
