add operations research

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -185,6 +185,27 @@
         <div fxFlex="60">
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <a class="item-title">Teaching Assistant for Operations Research</a>
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black" href="https://www.tum.de/en/" target="_blank">
+                    Technical University Munich</a> <a class="item-subtitle link-style-black" href="https://dss.in.tum.de/" target="_blank">
+                    Decision Sciences</a></h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                April 2021 - Sept 2021
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
+              </p>
+              <p class="item-content"> I am primarily holding two exercise sessions per week.
+                Additionally, I answer student questions and explain lecture content in an online forum.
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Mathematics Lecturer</a>
               <div fxLayout="row">
                 <h3>
