--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
        mat-button
        matTooltip="Get my CV as PDF document"
        class="mat-button">
-      Get new CV!
+      CV as PDF
     </a>
   </div>
   <div fxHide.lt-md fxFlex="60">
@@ -44,7 +44,7 @@
        mat-button
        matTooltip="Get my CV as PDF document"
        class="mat-button">
-      Get new CV!
+      CV as PDF
     </a>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap.gt-xs="10px" fxLayoutAlign="end center">
@@ -80,7 +80,7 @@
             mat-button
             matTooltip="Get my CV as PDF document"
             class="mat-button">
-      Get new CV!
+      CV as PDF
     </a>
 </mat-toolbar>
 <mat-toolbar class="smaller" fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
