add new workshop and remove bayesian neural networks

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,8 +17,7 @@
             <br>
             My current research is on Self-supervised learning for molecular graphs and I am writing my master's
             thesis about that under Pietro Liò at Cambridge.
-            My two main interests are (1) learning on graphs, symmetry aware GNNs, and equivariant attention mechanisms;
-            (2) variational inference and uncertainty estimation.
+            My main interest is graph representation learning and symmetry aware architectures to leverage equivariances and invariances.
             <br>
             From the experiences of my dual study program and through several
             <a (click)="scroll('projects')" class="link-style-green">projects</a>,
@@ -95,11 +94,15 @@
                 H. Stärk, C. Dallago, M. Heinzinger, B. Rost
               </p>
               <p class="item-content">
-                To appear at
-                <a href="https://aiforpublichealth.github.io/papers/" target="_blank"
-                   class="link-style-green">ICLR’21 AI for Public Health Workshop
+                To appear at the
+                <a href="https://aiforpublichealth.github.io" target="_blank"
+                   class="link-style-green">ICLR 2021 AI for Public Health Workshop
                 </a>
-                and currently under review for
+                and the
+                <a href="https://mlpcp21.github.io/index.html" target="_blank"
+                   class="link-style-green">ICLR 2021 Machine Learning for Preventing and Combating Pandemics Workshop
+                </a>.
+                Currently under review for
                 <a href="https://icml.cc/" target="_blank"
                    class="link-style-green">ICML 2021
                 </a>.
