perliminary camera ready paper

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,9 +15,9 @@
           <p class="text-align-left">
             Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
             <br>
-            My current research is on Self-supervised learning for molecular graphs and I am writing my master's
+            My current research is on self-supervised learning for molecular graphs, and I am writing my master's
             thesis about that under Pietro Liò at Cambridge.
-            My main interest is graph representation learning and symmetry aware architectures to leverage equivariances and invariances.
+            My main interest is graph representation learning and symmetry-aware architectures to leverage equivariances and invariances.
             <br>
             From the experiences of my dual study program and through several
             <a (click)="scroll('projects')" class="link-style-green">projects</a>,
